# Microservice.Payment

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  alembic.ini  pyproject.toml  ruff.toml
payment-deploy/: docker-compose.yaml
src/: __init__.py  config.py  main.py
src/application/: disp_depends.py  dispatcher.py
src/application/ports/: broker.py  logger.py  services.py  uow.py
src/application/use_cases/: charge_payment_use_case.py
src/domain/: base.py  dto.py  entities.py  enums.py  exceptions.py
src/infrastructure/: exceptions.py  models.py  session.py
src/infrastructure/logger/: impl.py
src/infrastructure/messaging/: consumer.py  kafka_router.py  messages.py
src/infrastructure/migrations/: env.py
src/infrastructure/migrations/versions/: 2026_02_07_1638-2a8fdbedd312_init.py  2026_02_07_1721-c08f05af3503_added_customer.py
src/infrastructure/repositories/: base_repository.py  customer_repository.py  interfaces.py  outbox_repository.py  processed_message_repository.py
src/infrastructure/services/: interfaces.py  order_service_proxy.py
src/infrastructure/uow/: impl.py  interfaces.py
src/presentation/: dependencies.py
src/presentation/handlers/: command_handler.py
